@@ -1,3 +1,8 @@
+2003-04-02  Mats Bengtsson  <mats.bengtsson@s3.kth.se>
+
+	* lily/multi-measure-rest.cc (set_spacing_rods): Handle the
+	minumum-length property correctly.
+
 2003-03-30  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
 	* VERSION (MY_PATCH_LEVEL): 1.6.9 released 
